--- a/HCMS/Views/Case/Details.cshtml
+++ b/HCMS/Views/Case/Details.cshtml
@@ -31,22 +31,22 @@
                                 @*<div class="col-md-4">*@
                                 <div class="form-group">
                                     <label asp-for="patientId" class="control-label">Select Patient</label>
-                                    @Html.DropDownListFor( m => m.patientId ,ViewBag.options as SelectList, new {@class ="form-control", type ="select"})
+                                    @Html.DropDownListFor( m => m.patientId ,ViewBag.options as SelectList, new {@class ="form-control", disabled ="disabled"})
                                     @*@Html.DropDownList("PatientId",ViewBag.options as SelectList ,ViewBag.option?[0], new {@class ="form-control"})*@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="reason" class="control-label">Reason</label>
-                                    <input type="text" asp-for="reason" class="form-control" />
+                                    <input type="text" readonly asp-for="reason" class="form-control" />
                                     <span asp-validation-for="reason" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="diagnosis" class="control-label">Diagnosis</label>
-                                    <input  type="text" asp-for="diagnosis" class="form-control" />
+                                    <input readonly type="text" asp-for="diagnosis" class="form-control" />
                                     <span asp-validation-for="diagnosis" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="treatmentPlan" class="control-label">treatment Plan</label>
-                                    <input  type="text" asp-for="treatmentPlan" class="form-control" />
+                                    <input readonly type="text" asp-for="treatmentPlan" class="form-control" />
                                     <span asp-validation-for="treatmentPlan" class="text-danger"></span>
                                 </div>
                                 @*</div>*@
